// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxField when it is a button 1`] = `
<div
  className="ReactForm"
>
  <input
    className="boxField foo"
    type="submit"
    value={undefined}
  />
</div>
`;

exports[`BoxField with className 1`] = `
<div
  className="ReactForm"
>
  <input
    className="boxField foo"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    value=""
  />
</div>
`;

exports[`BoxField with placeholder 1`] = `
<div
  className="ReactForm"
>
  <input
    className="boxField"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="foo"
    value=""
  />
</div>
`;

exports[`BoxField without optional props 1`] = `
<div
  className="ReactForm"
>
  <input
    className="boxField"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    value=""
  />
</div>
`;
